[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phantom_arbiter"
version = "0.1.0"
description = "High-frequency Solana arbitrage bot using Python 3.12 and Rust."
requires-python = ">=3.12"
dependencies = [
    "solana>=0.32.0",
    "solders>=0.21.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "aiohttp>=3.9.0",
    "psycopg2-binary>=2.9.0",
    "driftpy>=0.7.0",
    "anchorpy>=0.18.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "httpx",
    "textual>=0.50.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.8",
    "hypothesis>=6.98.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "phantom_core_bin"
manifest-path = "src_rust/Cargo.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# asyncio_default_fixture_loop_scope is removed (Pytest 8.x only)
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -p pytest_asyncio -p no:anchorpy"
markers = [
    "asyncio: mark test as async",
    "unit: unit tests",
    "integration: integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
]
norecursedirs = [
    ".git",
    "__pycache__",
    "legacy",
    "node_modules",
    ".venv",
]



